Big performance improvement by returning immutable lists in EmmisaryEventHandlerRegistry (#260)
* Big performance improvement by returning immutable lists in EmmisaryEventHandlerRegistry

* Encapsulate ImmutableRegisteredEventHandlersByEventType inside RegisteredEventHandlersByEventType